--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-spinner-material": "^1.3.1",
     "tailwindcss": "^2.2.4"
   },
   "devDependencies": {
